logo animation added

--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
 
 <body>
     <div class="logo-container">
-        <div class="vit-part">VI</div>
-        <div class="competext">&nbsp;compe<span class="vit-part">T</span>e</div>
-        <div class="cursor"></div>
+        <div class="vit-part">VIT</div>
+        <div class="competext">compeTe</div>
     </div>
+
+    <!-- Rest of your webpage content can go here -->
+    <div class="content" style="margin-top: 200px; text-align: center; display: none;">
+        <h1>Welcome to VI compeTe</h1>
+        <p>Your competition platform starts here!</p>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
