--- a/index.html
+++ b/index.html
@@ -6,19 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VI compeTe Logo</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div class="logo-container">
-        <div class="vit-part">VIT</div>
-        <div class="competext">compeTe</div>
+        <div class="vit-part">VI</div>
+        <div class="competext">&nbsp;compe<span class="vit-part">T</span>e</div>
     </div>
 
-    <!-- Rest of your webpage content can go here -->
-    <div class="content" style="margin-top: 200px; text-align: center; display: none;">
-        <h1>Welcome to VI compeTe</h1>
-        <p>Your competition platform starts here!</p>
+    <div class="login-container">
+        <div class="login-form">
+            <h2 class="box">Welcome</h2>
+            <form id="loginForm">
+                <div class="form-group">
+                    <label for="username">Username</label>
+                    <input type="text" id="username" name="username" required>
+                </div>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" id="password" name="password" required>
+                </div>
+                <button type="submit" class="login-btn">Login</button>
+                <div class="signup-link">
+                    Don't have an account? <a href="#">Sign up</a>
+                </div>
+            </form>
+        </div>
     </div>
 
     <script src="script.js"></script>
