final version of working website still have to add styles and chatbot

--- a/calculator.html
+++ b/calculator.html
@@ -121,8 +121,20 @@
         </div>
     </div>
 
+
     <script src="js/main.js"></script>
     <script src="js/calculator.js"></script>
+    <script>
+        // Initialize subjects array with any existing data
+        document.addEventListener('DOMContentLoaded', function () {
+            const savedData = localStorage.getItem('userData');
+            if (savedData) {
+                const userData = JSON.parse(savedData);
+                subjects = userData.subjects || [];
+                renderSubjects();
+            }
+        });
+    </script>
 </body>
 
 </html>
