--- a/dashboard.html
+++ b/dashboard.html
@@ -37,7 +37,7 @@
         <section class="grades-section">
             <div class="section-header">
                 <h2>Current Grades</h2>
-                <a href="calculator.html" class="primary-btn">Add New Subject</a>
+                <a href="calculator.html"><button id="add-subject-btn" class="primary-btn">Add New Subject</button></a>
             </div>
             <div class="grades-container" id="grades-container">
                 <!-- Dynamically populated from calculator data -->
