chatbot integrated and color changes

--- a/calculator.html
+++ b/calculator.html
@@ -12,7 +12,7 @@
 <body>
     <header class="calculator-header">
         <a href="dashboard.html" class="back-btn">← Back to Dashboard</a>
-        <h1>Grade Calculator</h1>
+        <h1 class="heading-page">Grade Calculator</h1>
     </header>
     <div class="container">
         <h1>Student Grade Calculator</h1>
@@ -120,6 +120,19 @@
             <div id="subjectsContainer"></div>
         </div>
     </div>
+    <!-- Chatbot Container -->
+    <div id="chatbot-container" class="chatbot-container">
+        <div class="chatbot-header">
+            <h3>Grade Prediction Assistant</h3>
+            <button id="chatbot-toggle" class="chatbot-toggle">×</button>
+        </div>
+        <div id="chatbot-messages" class="chatbot-messages"></div>
+        <div class="chatbot-input">
+            <input type="text" id="chatbot-input-field" placeholder="Ask about your grade chances...">
+            <button id="chatbot-send">Send</button>
+        </div>
+    </div>
+    <button id="chatbot-launch" class="chatbot-launch">Grade Help</button>
 
 
     <script src="js/main.js"></script>
@@ -134,6 +147,7 @@
             }
         });
     </script>
+
 </body>
 
 </html>
